--- a/webapp/test/flpSandbox.html
+++ b/webapp/test/flpSandbox.html
@@ -46,7 +46,7 @@
                 "comairbusZQMNCR-display": {
                     title: "QM NCR Application",
                     description: "QM NCR Application",
-                    additionalInformation: "SAPUI5.Component=com.airbus.ZQMNCR",
+                    additionalInformation: "SAPUI5.Component=com.airbus.ZQM_NCR",
                     applicationType: "URL",
                     url: "../"
                 }
@@ -64,7 +64,7 @@
         data-sap-ui-theme="sap_fiori_3"
         data-sap-ui-compatVersion="edge"
         data-sap-ui-language="en"
-        data-sap-ui-resourceroots='{"com.airbus.ZQMNCR": "../"}'
+        data-sap-ui-resourceroots='{"com.airbus.ZQM_NCR": "../"}'
         data-sap-ui-frameOptions="allow"> // NON-SECURE setting for testing environment
         </script>
         <script id="locate-reuse-libs" src="../utils/locate-reuse-libs.js" data-sap-ui-manifest-uri="../manifest.json">
