--- a/webapp/test/integration/opaTests.qunit.html
+++ b/webapp/test/integration/opaTests.qunit.html
@@ -9,8 +9,8 @@
             src="../../resources/sap-ui-core.js"
             data-sap-ui-theme="sap_fiori_3"
             data-sap-ui-resourceroots='{
-			"com.airbus.ZQMNCR": "../../",
-			"com.airbus.ZQMNCR.test": "../"
+			"com.airbus.ZQM_NCR": "../../",
+			"com.airbus.ZQM_NCR.test": "../"
 		}'
             data-sap-ui-animation="false"
             data-sap-ui-compatVersion="edge"
