--- a/webapp/test/testsuite.qunit.html
+++ b/webapp/test/testsuite.qunit.html
@@ -3,7 +3,7 @@
     <head>
         <title>
             QUnit test suite for
-            com.airbus.ZQMNCR
+            com.airbus.ZQM_NCR
         </title>
         <script src="../resources/sap/ui/qunit/qunit-redirect.js"></script>
         <script src="testsuite.qunit.js" data-sap-ui-testsuite></script>
