--- a/webapp/test/unit/unitTests.qunit.html
+++ b/webapp/test/unit/unitTests.qunit.html
@@ -10,7 +10,7 @@
             id="sap-ui-bootstrap"
             src="../../resources/sap-ui-core.js"
             data-sap-ui-resourceroots='{
-			"comairbus/ZQM_NCR": "../../"
+			"com/airbus/ZQM_NCR": "../../"
 		}'
         ></script>
 
